using UnityEngine;

public static class EnemyAnimationString
{
    // Animation Enemy Parameters
    public static readonly string IsMoving = "IsMoving";
    public static readonly string IsMeleeAttack = "MeleeAttack";
    public static readonly string IsRangeAttack = "RangedAttack";
    public static readonly string Hurt = "Hurt";
    public static readonly string Die = "Die";
}
